# cookiecutter-data-science-poetry-docker-makefile

./: LICENSE  README.md  cookiecutter.json
docs/docs/: index.md
tests/: test_creation.py
{{ cookiecutter.repo_name }}/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  tox.ini
{{ cookiecutter.repo_name }}/{{cookiecutter.source_name}}/: config.py
{{ cookiecutter.repo_name }}/{{cookiecutter.source_name}}/core/mixins/: pickle_mixin.py
{{ cookiecutter.repo_name }}/{{cookiecutter.source_name}}/data/: make_dataset.py
{{ cookiecutter.repo_name }}/{{cookiecutter.source_name}}/models/: __init__.py  base_model.py  example_model.py  model_factory.py
{{ cookiecutter.repo_name }}/{{cookiecutter.source_name}}/server/: api.py
